# chip-maximator

./: .gitignore  .ignore  Cargo.toml  IDEAS.md  README.md  build-web.sh  build.rs
assets/: README.md
assets/shaders/: batch.frag.glsl  batch.vert.glsl
assets/text/: scoloc-rules.txt
blender/: README.md  blender_assets.cats.txt
roms/: README.md  blinky.txt  breakout.txt  hey.ch8  langtons-ant.ch8  langtons-ant.txt  outlaw.txt  pong.txt  rush-hour.txt  tic-tac-toe.txt  tracer.ch8  tracer.txt  vers.txt  worm-v4.txt
roms/src/: hey.txt  langtons-ant.8o  tracer.8o
scripts/: README.md  cropping.py  my_render.py  rendering.py  spritesheet.py  util.py
src/: app.rs  assets.rs  audio.rs  cli.rs  draw.rs  emu.rs  game.rs  games.rs  input.rs  main.rs  native.rs  painter.rs  scene.rs  state.rs  tooltip.rs
src/audio/: native.rs  wasm.rs
src/emu/: font.rs
src/math/: color.rs  mod.rs  number.rs  point.rs  rect.rs
src/native/: wasm.rs
src/painter/: binding.rs  canvas.rs  icon.rs  merge.rs  shader.rs  sprite.rs  text.rs  texture.rs
src/scene/: cartridge_picker.rs  cpu.rs  game_display.rs  instuction_leds.rs  key.rs  keyboard.rs  links.rs  movie_display.rs  registers_display.rs  reset_button.rs  state_leds.rs  switch.rs  timers.rs  titles_display.rs  valve.rs
src/scene/titles_display/: scoloc.rs  scoundrel.rs  titles.rs
src/util/: anim.rs  mod.rs  timeline.rs  timer.rs  tweenable.rs
web/: gl.js  index.html  main.js
